<resources>
    <string name="app_name">여행어때</string>
    <string name="login_under_text">HowAboutTrip에서 여행 계획을\n세우는 건 어떤가요?</string>
    <string name="google_login_content_desciption">google login</string>
    <string name="how_about_trip">How About Trip</string>
    <string name="input_complete">입력 완료</string>
    <string name="sign_up_info_title">How About Trip을 처음 사용하시는 군요!</string>
    <string name="sign_up_info_context">신규 가입자는 추가 정보를 입력하셔야 합니다.\n이름은 본인 실명을 입력하셔야 합니다.</string>
    <string name="sign_up_info_name">이름</string>
    <string name="sign_up_name_hint">본인 명의 이름으로 작성</string>
    <string name="sign_up_info_phone">전화번호</string>
    <string name="sign_up_info_phone_hint">010-1234-5678</string>
    <string name="sign_up_info_birth">생년 월일</string>
    <string name="input">입력</string>
    <string name="not_entered">미입력</string>
    <string name="calendar_init_year">2024</string>
    <string name="calendar_init_month">01</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="confirm">확정</string>
    <string name="reset">초기화</string>
    <string name="save_check">saveCheck</string>
    <string name="menu_ticket">항공 숙박</string>
    <string name="menu_calendar">일정</string>
    <string name="menu_picture">사진 기록</string>
    <string name="menu_mypage">My</string>
    <string name="bearer_token">Bearer %1$s</string>
    <string name="error">오류</string>
    <string name="calendar_search">일정 조회</string>
    <string name="name_edit">닉네임 수정</string>
    <string name="weather">날씨</string>
    <string name="exchange_rate">환율</string>
    <string name="membership">멤버십</string>
    <string name="heart">좋아요</string>
    <string name="inquiry">문의</string>
    <string name="setting">설정</string>
    <string name="empty_schedule_title">일정을 만드세요!</string>
    <string name="d_day">D-</string>
    <string name="calendar_ai">일정 템플릿</string>
    <string name="calendar_add">일정 생성</string>
    <string name="d_day_zero">day</string>
    <string name="destination">목적지</string>
    <string name="purpose">여행 목적</string>
    <string name="personal">개인</string>
    <string name="family">가족과 함께</string>
    <string name="couple">연인과</string>
    <string name="people_num">인원수</string>
    <string name="adult">어른</string>
    <string name="zero">0</string>
    <string name="child">어린이</string>
    <string name="people_unit">명</string>
    <string name="date">날짜</string>
    <string name="search">검색</string>
    <string name="departure_date">출국 날짜</string>
    <string name="entrance_date">입국 날짜</string>
    <string name="departure_date_time">출국 날짜 및 시간</string>
    <string name="entrance_date_time">입국 날짜 및 시간</string>
    <string name="departure_time">출국 시간\n%1$s</string>
    <string name="entrance_time">입국 시간\n%1$s</string>
    <string name="time_input">시간 입력</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="time_format">%1$s:%2$s</string>
    <string name="confirm_basic">위의 내용을 입력하지 않았습니다.</string>
    <string name="confirm_btn">네, 확인했습니다.</string>
    <string name="time">시간</string>
    <string name="japan">일본</string>
    <string name="tokyo">도쿄</string>
    <string name="kyoto">교토</string>
    <string name="osaka">오사카</string>
    <string name="fukuoka">후쿠오카</string>
    <string name="europe">유럽</string>
    <string name="england">영국</string>
    <string name="france">프랑스</string>
    <string name="swiss">스위스</string>
    <string name="germany">독일</string>
    <string name="austria">오스트리아</string>
    <string name="america">미국</string>
    <string name="canada">캐나다</string>
    <string name="southeast_asia">동남아시아</string>
    <string name="yufuin">유후인</string>
    <string name="sapporo">삿포로</string>
    <string name="okinawa">오키나와</string>
    <string name="italy">이탈리아</string>
    <string name="spain">스페인</string>
    <string name="newyork">뉴욕</string>
    <string name="washington">워싱턴</string>
    <string name="hawaii">하와이</string>
    <string name="san_francisco">샌프란시스코</string>
    <string name="miami">마이애미</string>
    <string name="los_angeles">로스앤젤레스</string>
    <string name="vancouver">벤쿠버</string>
    <string name="toronto">토론토</string>
    <string name="quebec">퀘벡</string>
    <string name="philippines">필리핀</string>
    <string name="vietnam">베트남</string>
    <string name="indonesia">인도네시아</string>
    <string name="singapore">싱가포르</string>
    <string name="cambodia">캄보디아</string>
    <string name="malaysia">말레이시아</string>
    <string name="who">누구랑?</string>
    <string name="activity_level">여행 일정은?</string>
    <string name="theme">테마</string>
    <string name="single">나홀로</string>
    <string name="friend">친구와</string>
    <string name="leisurely">느긋한</string>
    <string name="relaxed">여유로운</string>
    <string name="busy">바쁜</string>
    <string name="without_a_break">쉴 틈없이</string>
    <string name="atmospheric">분위기 있는</string>
    <string name="renowned">현지에서 유명한</string>
    <string name="seasonal">계절감 있는</string>
    <string name="vibrant">활기찬</string>
    <string name="historic">역사적인</string>
    <string name="artistic">예술적인</string>
    <string name="natural">자연적인</string>
    <string name="adventurous">모험적인</string>
    <string name="romantic">로맨틱한</string>
    <string name="stress_relieving">스트레스를 푸는</string>
    <string name="cultural">문화적인</string>
    <string name="enjoying_local_cuisine">현지 음식을 즐기는</string>
    <string name="buy">구매</string>
    <string name="close">닫기</string>
    <string name="days_title">%1$s일차 : %2$s</string>
    <string name="edit">수정</string>
    <string name="aischedule">AiSchedule</string>
    <string name="type">type</string>
    <string name="schedule">Schedule</string>
    <string name="get_data_failed">일정 정보를 가져오는 과정에서 오류가 발생했습니다.\n다시 한 번 더 시도해주세요.</string>
    <string name="calendar_budget">예상 지출 금액 : %1$s %2$s</string>
    <string name="calendar_title_max_length">최대 20자</string>
    <string name="budget">예산 : %1$s %2$s</string>
    <string name="some_schedule_lng_lat">특정 일정의 주소</string>
    <string name="schedule_type">일정 유형</string>
    <string name="airplane">항공</string>
    <string name="hotel">숙소</string>
    <string name="place">관광지</string>
    <string name="preferred_departure_time">희망 출발 시간</string>
    <string name="schedule_title">일정 제목</string>
    <string name="input_limit">20자 이내에 입력</string>
    <string name="budget_title">예산</string>
    <string name="schedule_location">위치</string>
    <string name="won_unit">원</string>
    <string name="autocomplete_fragment_hint">구글 지도에서 위치 검색</string>
    <string name="tsushima">대마도</string>
    <string name="kyushu">규슈</string>
    <string name="czech">체코</string>
    <string name="saipan">사이판</string>
    <string name="guam">괌</string>
    <string name="taiwan">대만</string>
    <string name="laos">라오스</string>
    <string name="kota_kinabalu">코타키나발루</string>
    <string name="hanoi">하노이</string>
    <string name="da_nang_and_hoi_an">다낭/호이안</string>
    <string name="phu_quoc">푸꾸욱</string>
    <string name="nha_trang_and_da_lat">나트랑/달랏</string>
    <string name="bangkok">방콕</string>
    <string name="chiang_mai">치앙마이</string>
    <string name="phuket">푸켓</string>
    <string name="bali">발리</string>
    <string name="borikai">보리카이</string>
    <string name="server_network_error">서버와 통신하는 도중에 오류가 발생했습니다.\n다시 한 번 더 시도하신 다음에 문제가 지속되면 문의해주세요.</string>
    <string name="checklist">준비</string>
    <string name="share">공유</string>
    <string name="delete">삭제</string>
    <string name="no">아니요</string>
    <string name="yes">네</string>
    <string name="schedule_delete_function_info">해당 여행 일정을 삭제하시겠습니까?</string>
    <string name="address_check_function_info">위의 주소로 위치를 설정하시겠습니까?</string>
    <string name="keep_check_function_info">계속 진행하시겠습니까?</string>
    <string name="unknown_function_info">알 수 없는 작업이 실행되었습니다.\n다시 한 번 더 시도하시고 오류가 지속될 경우 문의해주세요.</string>
    <string name="airplane_string">AIRPLANE</string>
    <string name="hotel_string">HOTEL</string>
    <string name="place_string">PLACE</string>
    <string name="schedule_id_and_latlng">ScheduleIdAndLatLng</string>
    <string name="not_exist_schedule_error">존재하지 않는 여행 일정입니다.\n잠시 화면을 나갔다가 다시 시도해주세요.\n해당 문제가 지속될 경우 문의해주세요.</string>
    <string name="other_user_schedule_error">현재 유저에게 존재하지 않는 여행 일정입니다.\\n해당 화면을 나갔다가 다시 들어와 시도해주세요.\\n해당문제가 지속될 경우 문의해주세요.</string>
    <string name="server_calendar_id">id</string>
    <string name="server_calendar_latitude">latitude</string>
    <string name="server_calendar_longitude">longitude</string>
    <string name="ai_schedule_loading">일정 생성 중 입니다.\n조금만 기다려주세요.</string>
    <string name="recent_added_calendar">최근에 생성된 일정</string>
    <string name="record_count_user_title">%1$s님의 여행 기록</string>
    <string name="record_count">%1$s 개</string>
    <string name="recent_record_text">%1$s\n%2$s</string>
    <string name="my_purchased">내 예약</string>
    <string name="recent_airplane">최근 본 항공권</string>
    <string name="recent_hotel">최근에 본 숙소</string>
    <string name="trip_theme">여행 테마</string>
    <string name="except_theme">제외하고 싶은 활동</string>
    <string name="trip_date">여행 날짜</string>
    <string name="purpose_text">여행 목적은?</string>
    <string name="transportation">여행지내에서의 이동수단</string>
    <string name="vacation">휴가</string>
    <string name="holiday">방학</string>
    <string name="business_trip">출장</string>
    <string name="honeymoon">신혼여행</string>
    <string name="sightseeing">관광</string>
    <string name="shopping">쇼핑</string>
    <string name="healing">힐링</string>
    <string name="activities">활동</string>
    <string name="couple_date">데이트</string>
    <string name="filial_piety_trip">효도여행</string>
    <string name="graduation_trip">졸업여행</string>
    <string name="pilgrimage">성지순례</string>
    <string name="walk">도보</string>
    <string name="bus">버스</string>
    <string name="subway">지하철</string>
    <string name="train">기차</string>
    <string name="yacht">요트</string>
    <string name="boat">배</string>
    <string name="airplane_text">비행기</string>
    <string name="sport">레저 스포츠</string>
    <string name="nature">자연</string>
    <string name="shopping_and_city">쇼핑 및 도시</string>
    <string name="media">촬영지 및 미디어 콘텐츠</string>
    <string name="atmosphere">분위기</string>
    <string name="fishing">낚시</string>
    <string name="hiking">등산</string>
    <string name="camping">캠핑</string>
    <string name="Trekking">하이킹</string>
    <string name="Boating">보트</string>
    <string name="skiing">스키</string>
    <string name="scuba_diving">스쿠버 다이빙</string>
    <string name="paragliding">패러글라이딩</string>
    <string name="surfing">서핑</string>
    <string name="water_skiing">수상스키</string>
    <string name="cycling">자전거</string>
    <string name="golfing">골프</string>
    <string name="horseback_riding">승마</string>
    <string name="hotspot">핫플레이스</string>
    <string name="sns_trend">SNS 유행</string>
    <string name="selfie_spot">셀카존</string>
    <string name="shopping_text">쇼핑</string>
    <string name="market">시장</string>
    <string name="department_store">백화점</string>
    <string name="public_insitution">공공기관</string>
    <string name="landmark">랜드마크</string>
    <string name="food_tour">맛집투어</string>
    <string name="art_museum">미술관</string>
    <string name="museum">박물관</string>
    <string name="city_hall">시청</string>
    <string name="landmark_excluding_museums">박물관을 제외한 랜드마크</string>
    <string name="landmark_excluding_art_museums">미술관을 제외한 랜드마크</string>
    <string name="campus_tour">캠퍼스투어</string>
    <string name="cafe_tour">카페투어</string>
    <string name="fine_dining">파인다이닝</string>
    <string name="brewery_tour">술투어</string>
    <string name="park">공원</string>
    <string name="beach">해변가</string>
    <string name="sea">바다</string>
    <string name="plain">평원</string>
</resources>