<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sign_up"
            type="com.project.how.view.activity.SignUpActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_round_bottom_sheet_backgroud"
        app:behavior_hideable="true"
        app:behavior_draggable="true"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        app:layout_behavior="com.google.android.material.bottom-sheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_init_year"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_init_month"
            android:textSize="28sp"
            android:fontFamily="@font/bm_hanna"
            android:textColor="@color/black"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <ImageButton
            android:id="@+id/left"
            android:layout_marginStart="13dp"
            android:layout_marginTop="21dp"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/right"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="21dp"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/days_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/month"
            android:paddingHorizontal="35dp">

            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/sunday"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/monday"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/tue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/sun"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/tuesday"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/wed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/mon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/wednesday"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/thu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tue"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/thursday"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fri"
                app:layout_constraintStart_toEndOf="@id/wed"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/friday"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sat"
                app:layout_constraintStart_toEndOf="@id/thu"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_kr_bold"
                android:text="@string/saturday"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fri"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/days"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:foregroundGravity="center"
            android:paddingHorizontal="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/days_of_week"
            tools:listitem="@layout/calendar_day_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset"
            style="@style/Button.GrayRound"
            android:layout_width="51dp"
            android:layout_height="20dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="61dp"
            app:layout_constraintEnd_toStartOf="@+id/confirm"
            app:layout_constraintTop_toBottomOf="@+id/days" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm"
            style="@style/Button.BlackRound"
            android:layout_width="41dp"
            android:layout_height="20dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="61dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/days" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>