<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="calendar_list"
            type="com.project.how.adapter.recyclerview.CalendarListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@drawable/black_round_rectangle"
        android:layout_marginVertical="6dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@color/gray"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bm_hanna"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="test"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="13sp"
            android:autoSizeMaxTextSize="20sp"
            android:maxWidth="200dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/icon_link_size_fixed"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="2024.02.01 - 2024.03.01"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="start"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/calendar_budget"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checklist"
            android:layout_width="65dp"
            android:layout_height="22dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/checklist"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            android:drawableStart="@drawable/icon_checklist_size_fixed"
            android:background="@drawable/white_round_rectangle"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/budget" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_width="65dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_round_rectangle"
            android:drawableStart="@drawable/icon_share_size_fixed"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/checklist"
            app:layout_constraintTop_toBottomOf="@+id/budget" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="45dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:background="@drawable/white_round_rectangle"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/budget" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>